--- a/index.html
+++ b/index.html
@@ -60,10 +60,12 @@
      <h2> Challenge5 ==> BlackJack</h2>
      <h3><span id="jack1"> Let's play</span></h3>
         <div class="flex-box-container5">
-        <div class="flex-my-deal" id="flex-player-box"> 
-          <h3>Player result = <span id="flex-palyer-result">0</span></h3></div>
-       <div class="flex-computer-deal" id="flex-computer-box">
-        <h3> Computer result = <span id="flex-computer-result">0</span></h3></div>
+        <div  id="flex-player-box"> 
+          <h3>Player result = <span id="flex-player-result">0</span></h3>
+        </div>
+       <div  id="flex-computer-box">
+        <h3> Computer result = <span id="flex-computer-result">0</span></h3>
+      </div>
        </div>
        <div class="flex-box-container6">
         <div>
