--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
  <h2>Challenge3 ==> Stone,Paper,Scissor Game</h2>
  <div>
  <input type="text" id="runs" autofocus placeholder="No.ofTimes">
- <input type="button"  onclick="getval()" value="Submit"></div>
+ <button type="button" class="btn btn-primary"  onclick="getval()" value="Submit">submit</button></div>
 
  <div class="flex-box-container3">
         <img id="rock" src="http://www.clker.com/cliparts/O/h/m/f/m/K/rock-outline-md.png" height=150 width=150 alt="" onclick="rpsgame(this)">
